--- a/app.json
+++ b/app.json
@@ -1,37 +1,35 @@
 {
-  "expo": {
-    "name": "Criminal Minds",
-    "slug": "CriminalMinds",
-    "version": "1.1.1",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/icon.png",
-        "backgroundColor": "#ffffff"
-      },
-      "package": "com.paulstack.criminal_minds",
-      "versionCode": 2
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
-    "extra": {
-      "eas": {
-        "projectId": "d03e41df-b147-4c02-b98e-f4128da65ae0"
-      }
-    }
-  }
+	"expo": {
+		"name": "Criminal Minds",
+		"slug": "CriminalMinds",
+		"version": "1.1.1",
+		"orientation": "portrait",
+		"icon": "./assets/icon.png",
+		"userInterfaceStyle": "light",
+		"splash": {
+			"image": "./assets/splash.png",
+			"resizeMode": "contain",
+			"backgroundColor": "#ffffff"
+		},
+		"assetBundlePatterns": ["**/*"],
+		"ios": {
+			"supportsTablet": true
+		},
+		"android": {
+			"adaptiveIcon": {
+				"foregroundImage": "./assets/icon.png",
+				"backgroundColor": "#000000"
+			},
+			"package": "com.paulstack.criminal_minds",
+			"versionCode": 2
+		},
+		"web": {
+			"favicon": "./assets/favicon.png"
+		},
+		"extra": {
+			"eas": {
+				"projectId": "d03e41df-b147-4c02-b98e-f4128da65ae0"
+			}
+		}
+	}
 }
