--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "expo": "~49.0.7",
     "expo-dev-client": "~2.4.13",
     "expo-device": "~5.4.0",
+    "expo-file-system": "~15.4.5",
     "expo-font": "~11.4.0",
+    "expo-linking": "~5.0.2",
+    "expo-media-library": "~15.4.1",
     "expo-secure-store": "~12.3.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -33,7 +36,7 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "expo-linking": "~5.0.2"
+    "react-native-view-shot": "^3.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
